hopr/hopr-lib/tests/snapshots/session_integration_tests__surb_metrics.snap
---
source: hopr/builder/tests/session_integration_tests.rs
expression: snapshot
---
session_id:
  tag: 1
  pseudonym: "[pseudonym]"
snapshot_at_ms: "[snapshot_ts]"
lifetime:
  created_at_ms: "[created_at]"
  last_activity_at_ms: "[last_activity_at]"
  uptime_ms: "[uptime]"
  idle_ms: "[idle]"
  state: 0
  pipeline_errors_total: 0
frame:
  mtu_bytes: 1500
  timeout_ms: 800
  frame_capacity: 16384
  being_assembled: 0
  completed_total: 0
  emitted_total: 0
  discarded_total: 0
ack:
  mode: 0
  incoming_segments_total: 0
  incoming_retransmission_requests_total: 0
  incoming_acknowledged_frames_total: 0
  outgoing_segments_total: 0
  outgoing_retransmission_requests_total: 0
  outgoing_acknowledged_frames_total: 0
surb:
  produced_total: 100
  consumed_total: 40
  buffer_estimate: 60
  target_buffer: 200
  rate_per_sec: "[rate_per_sec]"
  refill_in_flight: true
transport:
  bytes_in_total: 0
  bytes_out_total: 0
  packets_in_total: 0
  packets_out_total: 0
